# Medical_Slice_Viewer

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test_out.txt  test_rois.py  test_rois2.py
scripts/: run_demo.sh  run_tests.sh
src/: __init__.py
src/annotation/: __init__.py  annotation.py  annotation_io.py
src/core/: __init__.py  crosshair.py  volume.py  window_level.py
src/io/: __init__.py  dicom_reader.py  nifti_reader.py
src/ui/: __init__.py  control_panel.py  main_window.py  slice_view.py
src/utils/: __init__.py  logging_config.py  synthetic.py
tests/: __init__.py  test_annotation.py  test_core.py  test_utils.py  test_volume.py
