[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medical-slice-viewer"
version = "0.1.0"
description = "Standalone orthogonal slice viewer for NIfTI and DICOM volumes"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["medical imaging", "DICOM", "NIfTI", "VTK", "PyQt6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24,<2.0",
    "nibabel>=5.1,<6.0",
    "pydicom>=2.4,<3.0",
    "vtk>=9.3,<10.0",
    "PyQt6>=6.6,<7.0",
]

[project.scripts]
medical-slice-viewer = "main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/ui/*"]   # UI requires a display; exclude from CI

[tool.coverage.report]
show_missing = true
skip_covered = false